k8s/infrastructure/vault/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: vault
  namespace: korczewski-infra
spec:
  serviceName: vault
  replicas: 1
  selector:
    matchLabels:
      app: vault
  template:
    metadata:
      labels:
        app: vault
    spec:
      serviceAccountName: vault
      containers:
        - name: vault
          image: hashicorp/vault:1.15.2
          args:
            - server
          ports:
            - containerPort: 8200
              name: http
          volumeMounts:
            - name: vault-data
              mountPath: /vault/data
          securityContext:
            capabilities:
              add:
                - IPC_LOCK
  volumeClaimTemplates:
    - metadata:
        name: vault-data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "smb-storage"
        resources:
          requests:
            storage: 1Gi
